force-app/main/default/objects/Bins__c/Bins__c.object-meta.xml
<CustomObject>
    <description>Created by AppSheet</description>
    <label>Bins</label>
    <nameField>
        <label>Bin ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Binss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>