force-app/main/default/objects/Bins__c/fields/Bin_ID__c.field-meta.xml
<CustomField>
    <fullName>Bin_ID__c</fullName>
    <externalId>true</externalId>
    <label>Bin ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>