force-app/main/default/objects/Bins__c/fields/Bin_Number__c.field-meta.xml
<CustomField>
    <fullName>Bin_Number__c</fullName>
    <label>Bin Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>